--- a/package.json
+++ b/package.json
@@ -23,8 +23,15 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
+    "googleapis": "^126.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
