--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.1",
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
   },
