--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.17.3",
     "googleapis": "^126.0.0",
     "jsonwebtoken": "^9.0.1",
+    "moment-timezone": "^0.5.43",
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^3.3.0",
